# ShadowNetOps

./: .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  FIXED_ISSUES.md  FIX_COMMANDS_DOCUMENTATION.md  LEGAL_DISCLAIMER.md  LICENSE  MARKETING_README.md  PROFESSIONAL_README.md  QUICKSTART.md  README.md  SECURITY.md  TOOLS_DOCUMENTATION.md  config.ini  config_manager.py  create_github_issues.bat  create_github_issues.sh  demo.py  design_guidelines.md  fix_issues.py  fix_it.bat  fix_it.sh  fixed-it-report.txt  package-lock.json  package.json  pyproject.toml  raniamek.txt  redteam.py  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: MetricCard.tsx  NetworkRecon.tsx  OSINTTools.tsx  PasswordTester.tsx  Terminal.tsx  VulnerabilityAssessment.tsx  app-sidebar.tsx
client/src/components/examples/: MetricCard.tsx  NetworkRecon.tsx  (+4 more)
client/src/pages/: Dashboard.tsx  OSINTPage.tsx  PasswordPage.tsx  ReconPage.tsx  TerminalPage.tsx  VulnerabilitiesPage.tsx
shared/: schema.ts
tests/: conftest.py  test_base_tool.py  test_config_manager.py  test_imports.py
tools/: __init__.py  base_tool.py  cryptography_tools.py  dependency_manager.py  forensics.py  malware_analysis.py  misc_utils.py  network_recon.py  osint_tools.py  osint_tools_fixed.py  password_tester.py  reporting.py  reverse_engineering.py  social_engineering.py  vuln_scanner.py
