[project]
name = "shadow-netops"
version = "2.1.0"
description = "A comprehensive cybersecurity assessment platform featuring multiple security testing modules for network, web application, wireless, and digital forensics domains."
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
    "questionary>=2.1.0",
    "python-magic>=0.4.27",
    "pycryptodome>=3.21.0",
]

[project.urls]
Homepage = "https://github.com/neoastra303/ShadowNetOps"
Documentation = "https://github.com/neoastra303/ShadowNetOps#readme"
Repository = "https://github.com/neoastra303/ShadowNetOps"
Issues = "https://github.com/neoastra303/ShadowNetOps/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
